--- a/diamondAvalanche.html
+++ b/diamondAvalanche.html
@@ -42,7 +42,7 @@
             <button id="full-screen"><img src="images/full_screen_icon.png" alt="full screen"></button>
             <audio id="sound-diamond"><source src="media/sound-diamond.mp3" type="audio/mpeg"></audio>
             <audio id="sound-rock"><source src="media/sound-rock.mp3" type="audio/mpeg"></audio>
-            <audio id="background-music" loop><source src="media/background-music.mp3" type="audio/mpeg"></audio>
+            <audio id="background-music" loop onloadeddata="this.volume = 0.2"><source src="media/background-music.mp3" type="audio/mpeg"></audio>
         </div>
     </main>
 </body>
