--- a/diamondAvalanche.html
+++ b/diamondAvalanche.html
@@ -10,6 +10,14 @@
     <title>מפולת יהלומים</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div><a href="index.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
+            <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
+            <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a href="logout.html">התנתקות</a>)</div>
+        </nav>
+        <script src="header.js"></script>
+    </header>
     <main>
         <h1>מפולת יהלומים</h1>
         <p>שוקי הלך למכרה היהלומים, אך לפתע החלה מפולת במכרה. עזרו לשוקי לאסוף כמה שיותר יהלומים מבלי להיפגע מהסלעים. הזיזו את שוקי בעזרת החיצים ימינה ושמאלה.</p>
