Adjusting the style

--- a/game1.html
+++ b/game1.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="game1.css" />
     <title>Memory game</title>
   </head>
   <body>
     <main>
       <h1>משחק זיכרון</h1>
-      <p>
-        נסו למצוא את כל הזוגות של הדגלים, שימו לב שמספר המיסיונות שלכם מוגבל😎
+      <p dir="rtl">
+        נסו למצוא את כל הזוגות של הדגלים, שימו לב שמספר הניסיונות שלכם מוגבל😎
       </p>
       <div class="wrapper">
         <ul class="cards">
