--- a/main.html
+++ b/main.html
@@ -4,7 +4,102 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <section class="background">
+      <div class="bubbles">
+        <!-- שמנו כאן תכונה ומספר בתור ערך -->
+        <!-- all the bubbles in the background -->
+        <span style="--i: 11"></span>
+        <span style="--i: 12"></span>
+        <span style="--i: 24"></span>
+        <span style="--i: 10"></span>
+        <span style="--i: 14"></span>
+        <span style="--i: 23"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 16"></span>
+        <span style="--i: 19"></span>
+        <span style="--i: 20"></span>
+        <span style="--i: 22"></span>
+        <span style="--i: 25"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 21"></span>
+        <span style="--i: 15"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 26"></span>
+        <span style="--i: 17"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 28"></span>
+        <span style="--i: 11"></span>
+        <span style="--i: 12"></span>
+        <span style="--i: 24"></span>
+        <span style="--i: 10"></span>
+        <span style="--i: 14"></span>
+        <span style="--i: 23"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 16"></span>
+        <span style="--i: 19"></span>
+        <span style="--i: 20"></span>
+        <span style="--i: 22"></span>
+        <span style="--i: 25"></span>
+        <span style="--i: 18"></span>
+        <span style="--i: 21"></span>
+        <span style="--i: 15"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 26"></span>
+        <span style="--i: 17"></span>
+        <span style="--i: 13"></span>
+        <span style="--i: 28"></span>
+      </div>
+    </section>
+    <section class="content">
+      <div class="main-title">
+        <a class="title" href="#" data-text="&nbsp;World Of Games"
+          >&nbsp;World Of Games</a
+        >
+      </div>
+      <div class="games">
+        <div class="game">
+          srtj
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          <b></b>
+        </div>
+        <div class="game">
+          srtj
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          atej
+          <b></b>
+        </div>
+        <div class="game">
+          <b></b>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
