--- a/diamondAvalanche.html
+++ b/diamondAvalanche.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <nav>
-            <div><a href="index.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
+            <div><a href="main.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
             <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
-            <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a href="logout.html">התנתקות</a>)</div>
+            <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
         </nav>
         <script src="header.js"></script>
     </header>
