--- a/game1.html
+++ b/game1.html
@@ -9,6 +9,14 @@
     <title>Memory game</title>
   </head>
   <body>
+    <header dir="rtl">
+      <nav>
+          <div><a href="main.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
+          <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
+          <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
+      </nav>
+      <script src="header.js"></script>
+    </header>
     <main>
       <h1>משחק זיכרון</h1>
       <p dir="rtl">
