--- a/main.html
+++ b/main.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+          <div><a href="main.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
+          <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
+          <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
+      </nav>
+      <script src="header.js"></script>
+  </header>
+  </body>
 </html>
