--- a/main.html
+++ b/main.html
@@ -64,40 +64,77 @@
         <div class="game">
           srtj
           <b></b>
+          <img src="games_pic/diamond.png" />
+          <div class="content">
+            <h2>Diamond Avalanche</h2>
+          </div>
         </div>
         <div class="game">
           atej
           <b></b>
+          <img src="games_pic/memory.png" />
+          <div class="content">
+            <h2>Memory Game</h2>
+          </div>
         </div>
-        <div class="game">
+        <div class="game lock">
           atej
           <b></b>
+          <img src="games_pic/game3.png" />
+          <div class="content">
+            <h2>Tic Tac</h2>
+          </div>
         </div>
-        <div class="game">
-          atej
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game4.png" />
+          <div class="content">
+            <h2>Custom Emoji</h2>
+          </div>
         </div>
-        <div class="game">
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game5.png" />
+          <div class="content">
+            <h2>Flags Game</h2>
+          </div>
         </div>
-        <div class="game">
-          srtj
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game6.png" />
+          <div class="content">
+            <h2>Paint Game</h2>
+          </div>
         </div>
-        <div class="game">
-          atej
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game7.png" />
+          <div class="content">
+            <h2>Jewel Magic</h2>
+          </div>
         </div>
-        <div class="game">
-          atej
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game7.png" />
+          <div class="content">
+            <h2>Jewel Magic</h2>
+          </div>
         </div>
-        <div class="game">
-          atej
+        <div class="game lock">
           <b></b>
+          <img src="games_pic/game7.png" />
+          <div class="content">
+            <h2>Jewel Magic</h2>
+          </div>
         </div>
-        <div class="game">
+        <div class="game lock">
           <b></b>
+          <img
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h2>Jewel Magic</h2>
+          </div>
         </div>
       </div>
     </section>
