the main page ready

--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="he">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
@@ -62,79 +62,172 @@
         >
       </div>
       <div class="games">
-        <div class="game">
-          srtj
+        <a class="game" href="diamondAvalanche.html">
           <b></b>
           <img src="games_pic/diamond.png" />
-          <div class="content">
-            <h2>Diamond Avalanche</h2>
-          </div>
-        </div>
-        <div class="game">
-          atej
-          <b></b>
-          <img src="games_pic/memory.png" />
-          <div class="content">
-            <h2>Memory Game</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          atej
-          <b></b>
-          <img src="games_pic/game3.png" />
-          <div class="content">
-            <h2>Tic Tac</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game4.png" />
-          <div class="content">
-            <h2>Custom Emoji</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game5.png" />
-          <div class="content">
-            <h2>Flags Game</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game6.png" />
-          <div class="content">
-            <h2>Paint Game</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game7.png" />
-          <div class="content">
-            <h2>Jewel Magic</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game7.png" />
-          <div class="content">
-            <h2>Jewel Magic</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
-          <img src="games_pic/game7.png" />
-          <div class="content">
-            <h2>Jewel Magic</h2>
-          </div>
-        </div>
-        <div class="game lock">
-          <b></b>
           <img
+            class="locked"
             src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
           />
           <div class="content">
-            <h2>Jewel Magic</h2>
+            <h3>Diamond Avalanche</h3>
+          </div>
+        </a>
+        <a class="game" href="game1.html">
+          <b></b>
+          <img src="games_pic/memory.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+
+          <div class="content">
+            <h3>Memory Game</h3>
+          </div>
+        </a>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game3.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+
+          <div class="content">
+            <h3>Tic Tac</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game4.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Custom Emoji</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game5.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Flags Game</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game6.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Paint Game</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game7.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Jewel Magic</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game3.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+
+          <div class="content">
+            <h3>Tic Tac</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game4.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Custom Emoji</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game5.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Flags Game</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game6.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Paint Game</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game7.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Jewel Magic</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game7.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Jewel Magic</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game7.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Jewel Magic</h3>
+          </div>
+        </div>
+        <div class="game">
+          <b></b>
+          <img src="games_pic/game7.png" />
+          <img
+            class="locked"
+            src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
+          />
+          <div class="content">
+            <h3>Jewel Magic</h3>
           </div>
         </div>
       </div>
