update high and profile

--- a/profile.html
+++ b/profile.html
@@ -52,6 +52,16 @@
                 <input type="tel" id="phone" name="phone">
                 <button class="edit little" type="button"><img src="images/edit_icon.png" alt="עריכה"></button>
             </div>
+            <fieldset>
+                <legend>מפולת יהלומים</legend>
+                <p><strong>שיא: </strong><span id="high-diamond"></span>💎</p>
+                <p><strong>כניסה אחרונה: </strong><span id="date-diamond"></span></p>
+            </fieldset>
+            <fieldset>
+                <legend>משחק זכרון</legend>
+                <p><strong>שיא: </strong><span id="high-memory"></span></p>
+                <p><strong>כניסה אחרונה: </strong><span id="date-memory"></span></p>
+            </fieldset>
         </form>
     </main>
 </body>
