--- a/main.html
+++ b/main.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
+  <header dir="rtl">
+    <nav>
+        <div><a href="main.html" id="home-link" class="no-decoration">אתר המשחקים הגדול</a></div>
+        <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
+        <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
+    </nav>
+    <script src="header.js"></script>
+  </header>
   <body>
     <section class="background">
       <div class="bubbles">
