--- a/diamondAvalanche.html
+++ b/diamondAvalanche.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="diamondAvalanche.css" rel="stylesheet" type="text/css">
+    <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/diamondAvalanche.css" rel="stylesheet" type="text/css">
     <title>מפולת יהלומים</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
             <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
         </nav>
-        <script src="header.js"></script>
+        <script src="scripts/header.js"></script>
     </header>
     <main>
         <h1>מפולת יהלומים</h1>
@@ -54,5 +54,5 @@
         </div>
     </main>
 </body>
-<script src="diamondAvalanche.js"></script>
+<script src="scripts/diamondAvalanche.js"></script>
 </html>
