--- a/signUp.html
+++ b/signUp.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="form.css" rel="stylesheet" type="text/css">
+    <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/form.css" rel="stylesheet" type="text/css">
     <title>הרשמה</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
             <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
         </nav>
-        <script src="header.js"></script>
+        <script src="scripts/header.js"></script>
     </header>
     <main>
         <h1>יצירת חשבון</h1>
@@ -48,5 +48,5 @@
         </form>
     </main>
 </body>
-<script src="signUp.js"></script>
+<script src="scripts/signUp.js"></script>
 </html>
