--- a/game1.html
+++ b/game1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="game1.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/game1.css" />
     <title>Memory game</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
           <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
       </nav>
-      <script src="header.js"></script>
+      <script src="scripts/header.js"></script>
     </header>
     <main>
       <h1>משחק זיכרון</h1>
@@ -200,6 +200,6 @@
       <p><b></b></p>
       <button class="start-game">start</button>
     </div>
-    <script src="game1.js"></script>
+    <script src="scripts/game1.js"></script>
   </body>
 </html>
