--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="main.css" />
+    <link href="CSS/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="CSS/main.css" />
     <title>Document</title>
   </head>
   <header dir="rtl">
@@ -14,7 +14,7 @@
         <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
         <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
     </nav>
-    <script src="header.js"></script>
+    <script src="scripts/header.js"></script>
   </header>
   <body>
     <section class="background">
@@ -240,6 +240,6 @@
         </div>
       </div>
     </section>
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
