--- a/profile.html
+++ b/profile.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="form.css" rel="stylesheet" type="text/css">
-    <link href="profile.css" rel="stylesheet" type="text/css">
+    <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/form.css" rel="stylesheet" type="text/css">
+    <link href="CSS/profile.css" rel="stylesheet" type="text/css">
     <title>פרופיל</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div  id="login" class="left-nav"><a href="login.html"  class="no-decoration">התחברות</a></div>
             <div id="logout" class="left-nav">שלום, <a id="profile" href="profile.html"></a> (<a id="logout-link" href="main.html">התנתקות</a>)</div>
         </nav>
-        <script src="header.js"></script>
+        <script src="scripts/header.js"></script>
     </header>
     <main>
         <h1>פרופיל אישי</h1>
@@ -65,5 +65,5 @@
         </form>
     </main>
 </body>
-<script src="profile.js"></script>
+<script src="scripts/profile.js"></script>
 </html>
