--- a/main.html
+++ b/main.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
   <body>
+    <header dir="rtl">
+      <nav>
+        <div>
+          <a href="main.html" id="home-link" class="no-decoration"
+            >אתר המשחקים הגדול</a
+          >
+        </div>
+        <div id="login" class="left-nav">
+          <a href="login.html" class="no-decoration">התחברות</a>
+        </div>
+        <div id="logout" class="left-nav">
+          שלום, <a id="profile" href="profile.html"></a> (<a
+            id="logout-link"
+            href="main.html"
+            >התנתקות</a
+          >)
+        </div>
+      </nav>
+      <script src="header.js"></script>
+    </header>
     <section class="background">
       <div class="bubbles">
         <!-- שמנו כאן תכונה ומספר בתור ערך -->
@@ -199,35 +219,36 @@
         </div>
         <div class="game">
           <b></b>
-          <img src="games_pic/game7.png" />
+          <img src="games_pic/game3.png" />
           <img
             class="locked"
             src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
           />
+
           <div class="content">
-            <h3>Jewel Magic</h3>
+            <h3>Tic Tac</h3>
           </div>
         </div>
         <div class="game">
           <b></b>
-          <img src="games_pic/game7.png" />
+          <img src="games_pic/game4.png" />
           <img
             class="locked"
             src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
           />
           <div class="content">
-            <h3>Jewel Magic</h3>
+            <h3>Custom Emoji</h3>
           </div>
         </div>
         <div class="game">
           <b></b>
-          <img src="games_pic/game7.png" />
+          <img src="games_pic/game5.png" />
           <img
             class="locked"
             src="https://static.vecteezy.com/system/resources/previews/000/632/750/non_2x/vector-lock-icon-symbol-sign.jpg"
           />
           <div class="content">
-            <h3>Jewel Magic</h3>
+            <h3>Flags Game</h3>
           </div>
         </div>
       </div>
