--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
           >)
         </div>
       </nav>
-      <script src="header.js"></script>
+      <script src="scripts/header.js"></script>
     </header>
     <section class="background">
       <div class="bubbles">
@@ -273,6 +273,10 @@
         </div>
       </div>
     </section>
+    <div id="game-over" class="hide-message">
+      <p><b>You have to log in befor you start</b></p>
+      <a href="login.html"> Log In </a>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
