--- a/main.html
+++ b/main.html
@@ -273,7 +273,7 @@
         </div>
       </div>
     </section>
-    <div id="game-over" class="hide-message">
+    <div id="need_log_in" class="hide-message">
       <p><b>You have to log in before you start</b></p>
       <a href="login.html"> Log In </a>
     </div>
