--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="CSS/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="CSS/main.css" />
-    <title>Document</title>
+    <title>עולם של משחקים</title>
   </head>
   <body>
     <header dir="rtl">
